# Promptwaffle_LoRa_Organizer_Tagger

./: .gitignore  CROP_TOOL_IMPLEMENTATION.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
docs/: LM_STUDIO_SETUP.md  TECHNICAL_RECOMMENDATIONS.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/models/: .gitkeep  README.md
src-tauri/resources/: joycaption_inference.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: batch_rename.rs  captions.rs  crop_status.rs  detect.rs  export.rs  images.rs  joycaption.rs  joycaption_installer.rs  lm_studio.rs  mod.rs  project.rs  ratings.rs  resource_monitor.rs  wd14.rs
src/components/ai/: AiPanel.tsx
src/components/editor/: RightPanel.tsx  TagEditor.tsx
src/components/export/: ExportModal.tsx
src/components/filter/: FilterBar.test.tsx  FilterBar.tsx
src/components/grid/: ImageGrid.tsx  ThumbnailCell.tsx
src/components/help/: HelpModal.tsx
src/components/layout/: AppLayout.tsx  ClearAllRatingsModal.tsx  ClearAllTagsModal.tsx  ResourceMonitor.tsx  Sidebar.tsx  StatusBar.tsx  (+2 more)
src/hooks/: useFocusTrap.ts  useProject.ts  useRatingShortcuts.ts
src/lib/: buckets.ts  tauri.ts
src/stores/: aiStore.ts  cropStore.ts  filterStore.test.ts  filterStore.ts  historyStore.ts  projectLoadStore.ts  projectStore.ts  searchReplaceStore.ts  selectionStore.ts  settingsStore.ts  uiStore.ts
src/types/: index.ts
(+9 files in other folders)
